# funke

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  plugins.json
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
crates/funke-app/: Cargo.toml  build.rs  tauri.conf.json
crates/funke-app/capabilities/: default.json
crates/funke-app/installer/: hooks.nsh
crates/funke-app/src/: autofill.rs  autotype.rs  focus.rs  main.rs  native.rs  providers.rs  update.rs
crates/funke-app/ui/: i18n.js  index.html  keys.css  keys.js  main.js  settings.css  settings.html  settings.js  style.css
crates/funke-app/ui/locales/: de.js  en.js
crates/funke-apps/: Cargo.toml
crates/funke-apps/src/: lib.rs
crates/funke-clipboard/: Cargo.toml
crates/funke-clipboard/src/: lib.rs  provider.rs  secret.rs  win.rs
crates/funke-clipboard/tests/: secretshape_pin.rs
crates/funke-content/: Cargo.toml
crates/funke-content/src/: lib.rs  winsearch.rs
crates/funke-core/: Cargo.toml
crates/funke-core/locales/: de.json  en.json
crates/funke-core/src/: frecency.rs  fuzzy.rs  glyph.rs  i18n.rs  lib.rs  orchestrator.rs  recents.rs  roots.rs  settings.rs
crates/funke-everything/: Cargo.toml
crates/funke-everything/src/: ipc.rs  lib.rs
crates/funke-files/: Cargo.toml
crates/funke-files/src/: lib.rs
crates/funke-plugin/: Cargo.toml
crates/funke-plugin/src/: catalog.rs  host.rs  lib.rs  proto.rs  sdk.rs
crates/funke-shell/: Cargo.toml
crates/funke-shell/src/: browser.rs  form.rs  icon.rs  lib.rs  uia.rs
crates/funke-snippets/: Cargo.toml
crates/funke-snippets/src/: expand.rs  lib.rs  provider.rs
crates/funke-utils/: Cargo.toml
crates/funke-utils/src/: browser.rs  calc.rs  lib.rs  links.rs  system.rs  units.rs  web.rs
crates/funke-vault/: Cargo.toml
crates/funke-vault/src/: cli.rs  context.rs  hello.rs  job.rs  keycred.rs  lib.rs  lockscreen.rs  provider.rs  secret_buf.rs  sequence.rs  serve.rs  session_events.rs
crates/funke-windows/: Cargo.toml
crates/funke-windows/src/: lib.rs
docs/: DESIGN.md  PLAN.md  PLUGINS.md  TRANSLATING.md
docs/superpowers/plans/: 2026-07-22-overlay-customization.md
docs/superpowers/specs/: 2026-07-22-overlay-customization-design.md
funke-plugins/agent-sessions/: Cargo.toml  plugin.json
funke-plugins/agent-sessions/src/: claude.rs  codex.rs  main.rs  session.rs  tool.rs
funke-plugins/template/: Cargo.toml  plugin.json
funke-plugins/template-python/: plugin.json  plugin.py  run.cmd
funke-plugins/template/src/: main.rs
packaging/winget/: klappstuhlpy.Funke.installer.yaml  klappstuhlpy.Funke.locale.en-US.yaml  klappstuhlpy.Funke.yaml
