[workspace]
resolver = "2"
members = [
    "crates/funke-core",
    "crates/funke-shell",
    "crates/funke-apps",
    "crates/funke-files",
    "crates/funke-everything",
    "crates/funke-utils",
    "crates/funke-windows",
    "crates/funke-clipboard",
    "crates/funke-snippets",
    "crates/funke-vault",
    "crates/funke-plugin",
    "crates/funke-app",
    "funke-plugins/template",
]

[workspace.package]
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
strip = true
