[workspace]
resolver = "2"
members = [
    "crates/funke-core",
    "crates/funke-shell",
    "crates/funke-apps",
    "crates/funke-files",
    "crates/funke-everything",
    "crates/funke-utils",
    "crates/funke-windows",
    "crates/funke-clipboard",
    "crates/funke-snippets",
    "crates/funke-vault",
    "crates/funke-plugin",
    "crates/funke-app",
    "funke-plugins/template",
    "funke-plugins/agent-sessions",
]

[workspace.package]
license = "MIT"

[profile.release]
# Fat LTO stays, and it was measured rather than assumed. Switching to `lto = "thin"` +
# `codegen-units = 16` links ~32% faster (116s → 79s here) but grows funke.exe from 14.5 MB
# to 17.0 MB — **+17.6%**, on a binary every user downloads, and downloads again on every
# auto-update. A minute of CI is not worth that; the CI time was won back by not building the
# app twice in the release workflow instead. Don't "optimize" this without re-measuring both
# numbers.
lto = true
codegen-units = 1
strip = true
