[package]
name = "funke-apps"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Installed-application provider: Start Menu/Store apps and PATH executables"

[dependencies]
funke-core = { path = "../funke-core" }
funke-shell = { path = "../funke-shell" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
