[package]
name = "funke-core"
version = "0.6.0"
edition = "2021"
license.workspace = true
description = "UI-free core of the Funke launcher: provider trait, result types, registry"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3"
# Only for `roots.rs`: an empty `index_roots` means the home directory, and both file
# providers have to resolve it the same way.
dirs = "6"
