[package]
name = "funke-plugin"
version = "0.2.0"
edition = "2021"
license.workspace = true
description = "Funke plugin protocol (JSON-RPC over stdio): author SDK + launcher-side host"

[dependencies]
funke-core = { path = "../funke-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Catalog installs: fetch the index + archive (ureq is already in the tree via funke-vault),
# pin the archive by hash, unpack it.
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
zip = "4"
