[package]
name = "funke-shell"
version = "0.1.0"
edition = "2021"
description = "Windows shell helpers shared by provider crates (icon extraction)"

[dependencies]
png = "0.17"
base64 = "0.22"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
