[package]
name = "funke-shell"
version = "0.2.0"
edition = "2021"
license.workspace = true
description = "Windows shell helpers shared by provider crates (icon extraction, UI Automation)"

[dependencies]
png = "0.17"
base64 = "0.22"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
] }
