[package]
name = "funke-utils"
version = "0.2.0"
edition = "2021"
license.workspace = true
description = "Small utility providers: calculator, web search, quicklinks, system commands"

[dependencies]
funke-core = { path = "../funke-core" }
funke-shell = { path = "../funke-shell" }
fasteval = "0.2"
urlencoding = "2"
