[package]
name = "funke-vault"
version = "0.3.1"
edition = "2021"
license.workspace = true
description = "Bitwarden/Vaultwarden provider via the official CLI's `bw serve` REST API"

[dependencies]
funke-core = { path = "../funke-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
zeroize = "1"
base64 = "0.22"
dirs = "6"
windows = { version = "0.61", features = [
    "Security_Credentials_UI",
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_WinRT",
] }
windows-future = "0.2"
