[package]
name = "funke-vault"
version = "0.5.0"
edition = "2021"
license.workspace = true
description = "Bitwarden/Vaultwarden provider via the official CLI's `bw serve` REST API"

[dependencies]
funke-core = { path = "../funke-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
zeroize = "1"
base64 = "0.22"
dirs = "6"
# The Windows Hello session blob (see hello.rs): HKDF-SHA256 over a TPM signature,
# AES-256-GCM over the session key. RustCrypto, MIT/Apache — license-compatible.
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
hkdf = "0.12"
sha2 = "0.10"
getrandom = "0.3"
windows = { version = "0.61", features = [
    "Security_Credentials",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Win32_Security_Cryptography_Sip",
    "Win32_Security_WinTrust",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
windows-future = "0.2"
