[package]
name = "funke-windows"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Window switcher provider: fuzzy-match open windows, switch to or kill them"

[dependencies]
funke-core = { path = "../funke-core" }
funke-shell = { path = "../funke-shell" }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
