[package]
name = "funke-plugin-agent-sessions"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Search and resume Claude Code and Codex sessions from the launcher"

[dependencies]
funke-plugin = { path = "../../crates/funke-plugin" }
funke-core = { path = "../../crates/funke-core" }
funke-shell = { path = "../../crates/funke-shell" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
